Fix spatial dialog too wide nominatim results (#1959)
This happened only in Firefox that the search results where displayed partly under the map.

--- a/frontend/src/app/formly/types/map/spatial-dialog/free-spatial/free-spatial.component.scss
+++ b/frontend/src/app/formly/types/map/spatial-dialog/free-spatial/free-spatial.component.scss
@@ -5,6 +5,7 @@
 
   .free-spatial-wrapper {
     flex: 1;
+    overflow: auto;
   }
 
   .mat-form-field .mat-icon {
